--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   "MainTextButton": "Update",
   "Cancelable": "true",
   "CancelButtonText": "Cancel",
-  "DownloadLink": "www.example.com",
-  "Version": "1.4"
+  "DownloadLink": "https://www.instagram.com/abhinav_.ser/",
+  "Version": "3.4"
 }
