--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 {
   "Visibility": "VISIBLE",
   "Title": "TRAVA TOOLS BOX ",
-  "Description": "NEW TYPES UPDATE ",
+  "Description": "NEW TYPES UPDATE ADD STATUS SAVER
+
+ADD VIDEO TO MP3 CONVETER
+
+ADD TEXT REPTER
+
+ADD IMAGE TO PDF CONVETER
+
+
+ADD TEXT TO SPEAK
+
+ADD FIREBASE WALLPAPER
+
+ADD INSTAGRAM AND YouTube downloader
+
+NEW UI 
+
+ADD  FIREBASE NOTIFICATION
+
+LODDING OTHER FEATURES ON NEXT UPDATE........................",
   "MainTextButton": "Update",
   "Cancelable": "true",
   "CancelButtonText": "Cancel",
   "DownloadLink": "https://www.instagram.com/abhinav_.ser/",
-  "Version": "3.4"
+  "Version": "1.2"
 }
