--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@ LODDING OTHER FEATURES ON NEXT UPDATE........................",
   "MainTextButton": "Update",
   "Cancelable": "true",
   "CancelButtonText": "Cancel",
-  "DownloadLink": "https://www.instagram.com/abhinav_.ser/",
+  "DownloadLink": "https://youtu.be/u8xuqnIfkFM",
   "Version": "1.2"
 }
