--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
   "Visibility": "VISIBLE",
   "Title": "TRAVA TOOLS BOX ",
   "Description": "NEW TYPES UPDATE ADD STATUS SAVER
+👨‍🦯ADD VIDEO TO MP3 CONVETER
 
-ADD VIDEO TO MP3 CONVETER
+👨‍🦯ADD TEXT REPTER
 
-ADD TEXT REPTER
+👨‍🦯ADD IMAGE TO PDF CONVETER
 
-ADD IMAGE TO PDF CONVETER
+👨‍🦯ADD TEXT TO SPEAK
 
+👨‍🦯ADD FIREBASE WALLPAPER
 
-ADD TEXT TO SPEAK
+👨‍🦯ADD INSTAGRAM AND YouTube downloader
 
-ADD FIREBASE WALLPAPER
+👨‍🦯NEW UI 
 
-ADD INSTAGRAM AND YouTube downloader
+👨‍🦯ADD  FIREBASE NOTIFICATION
 
-NEW UI 
-
-ADD  FIREBASE NOTIFICATION
+ FROM DEVLOPER ABHINAV 💸
 
 LODDING OTHER FEATURES ON NEXT UPDATE........................",
   "MainTextButton": "Update",
   "Cancelable": "true",
   "CancelButtonText": "Cancel",
-  "DownloadLink": "https://youtu.be/u8xuqnIfkFM",
+  "DownloadLink": "https://www.instagram.com/abhinav_.ser/",
   "Version": "1.2"
 }
