--- a/index.html
+++ b/index.html
@@ -2,25 +2,18 @@
   "Visibility": "VISIBLE",
   "Title": "TRAVA TOOLS BOX ",
   "Description": "NEW TYPES UPDATE ADD STATUS SAVER
-👨‍🦯ADD VIDEO TO MP3 CONVETER
-
+👨‍🦯ADD VIDEO TO MP3 CONVETE
 👨‍🦯ADD TEXT REPTER
-
 👨‍🦯ADD IMAGE TO PDF CONVETER
-
 👨‍🦯ADD TEXT TO SPEAK
-
 👨‍🦯ADD FIREBASE WALLPAPER
-
 👨‍🦯ADD INSTAGRAM AND YouTube downloader
-
 👨‍🦯NEW UI 
-
 👨‍🦯ADD  FIREBASE NOTIFICATION
 
- FROM DEVLOPER ABHINAV 💸
+ UPDATE FROM DEVLOPER ABHINAV 💸
 
-LODDING OTHER FEATURES ON NEXT UPDATE........................",
+  OTHER FEATURES ON NEXT UPDATE........................",
   "MainTextButton": "Update",
   "Cancelable": "true",
   "CancelButtonText": "Cancel",
