--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   OTHER FEATURES ON NEXT UPDATE........................",
   "MainTextButton": "Update",
-  "Cancelable": "true",
+  "Cancelable": "false",
   "CancelButtonText": "Cancel",
   "DownloadLink": "https://www.instagram.com/abhinav_.ser/",
   "Version": "1.1"
