--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 {
   "Visibility": "VISIBLE",
-  "Title": "TRAVA TOOLS BOX ",
+  "Title": "TRAVA TOOLS BOX👨‍🦯 ",
   "Description": "NEW TYPES UPDATE ADD STATUS SAVER
 
 👨‍🦯ADD VIDEO TO MP3 CONVETE
@@ -26,5 +26,5 @@
   "Cancelable": "false",
   "CancelButtonText": "Cancel",
   "DownloadLink": "https://www.instagram.com/abhinav_.ser/",
-  "Version": "1.1"
+  "Version": "1.2"
 }
