--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 {
-  "Visibility": "Invisible",
+  "Visibility": "INVISIBLE",
   "Title": "TRAVA TOOLS BOX👨‍🦯 ",
   "Description": "NEW TYPES UPDATE ADD STATUS SAVER
 
